[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Outros/HUDEnergia.png" type="Texture" id=1]
[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/ButtonIndicator/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/HudEnergia.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Outros/OutOfEnergyAdvertise.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Outros/Cafeteira.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Outros/Coffee screen.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.5, 8 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[node name="HudEenrgiaGeral" type="Node2D"]
script = ExtResource( 4 )

[node name="OutOfEnergy" type="Control" parent="."]
visible = false
margin_left = 320.0
margin_top = 180.0
margin_right = 360.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutOfEnergyAdvertise" type="Sprite" parent="OutOfEnergy"]
texture = ExtResource( 5 )

[node name="OutOfEnergyCloseButton" type="Button" parent="OutOfEnergy"]
show_behind_parent = true
margin_left = 131.0
margin_top = 16.0
margin_right = 170.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OutOfEnergy"]
margin_left = -95.0
margin_top = -20.0
margin_right = 175.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "Sua enegia acabou. A recarregue em uma máquina de 
café."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HudEnergia" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 4

[node name="Area2D" type="Area2D" parent="HudEnergia"]
position = Vector2( 34, 44.5 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HudEnergia/Area2D"]
position = Vector2( -0.5, 10 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="HudEnergia/Area2D"]
position = Vector2( 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 2

[node name="Button" parent="HudEnergia/Area2D" instance=ExtResource( 3 )]
visible = false
position = Vector2( 1, 15 )
scale = Vector2( 2, 2 )

[node name="Control" type="Control" parent="."]
visible = false
margin_left = 320.0
margin_top = 180.0
margin_right = 360.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Control"]
margin_left = -20.5
margin_top = 98.0
margin_right = 21.5
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "Comprar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="Control"]
show_behind_parent = true
margin_left = -36.0
margin_top = 88.0
margin_right = 36.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Control"]
show_behind_parent = true
margin_left = 92.0
margin_top = -136.0
margin_right = 116.0
margin_bottom = -112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyAdvertise" type="Control" parent="."]
visible = false
margin_left = 320.0
margin_top = 180.0
margin_right = 340.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="EnergyAdvertise"]
texture = ExtResource( 5 )

[node name="AdvertiseButton" type="Button" parent="EnergyAdvertise"]
show_behind_parent = true
margin_left = 130.0
margin_top = 16.0
margin_right = 170.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnergyAdvertise"]
margin_left = -45.5
margin_top = -7.5
margin_right = 80.5
margin_bottom = 6.5
custom_fonts/font = SubResource( 4 )
text = "Sua energia já está cheia."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OutOfEnergy/OutOfEnergyCloseButton" to="." method="_on_OutOfEnergyCloseButton_pressed"]
[connection signal="body_entered" from="HudEnergia/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="HudEnergia/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Control/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="Control/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="EnergyAdvertise/AdvertiseButton" to="." method="_on_AdvertiseButton_pressed"]
